--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.17.1",
     "mongodb": "^3.6.2",
     "reflect-metadata": "^0.1.13",
-    "tsyringe": "^4.3.0"
+    "tsyringe": "^4.3.0",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
