--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/nunjucks": "^3.1.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.2",
+    "nunjucks": "^3.2.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
     "uuid": "^8.3.1"
