--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/nunjucks": "^3.1.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.2.3",
     "mongodb": "^3.6.2",
     "nunjucks": "^3.2.2",
     "reflect-metadata": "^0.1.13",
@@ -22,6 +22,8 @@
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/mongodb": "^3.5.27",
+    "@types/express-rate-limit": "^5.1.0",
+    "@types/nunjucks": "^3.1.3",
     "tslint": "^6.1.3",
     "typescript": "^4.0.2"
   }
