--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "escape-html": "^1.0.3",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.3",
     "mongodb": "^3.6.2",
@@ -20,6 +21,7 @@
     "uuid": "^8.3.1"
   },
   "devDependencies": {
+    "@types/escape-html": "^1.0.0",
     "@types/express": "^4.17.8",
     "@types/mongodb": "^3.5.27",
     "@types/express-rate-limit": "^5.1.0",
