--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.3",
@@ -20,9 +21,10 @@
     "uuid": "^8.3.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.8",
-    "@types/mongodb": "^3.5.27",
     "@types/express-rate-limit": "^5.1.0",
+    "@types/mongodb": "^3.5.27",
     "@types/nunjucks": "^3.1.3",
     "tslint": "^6.1.3",
     "typescript": "^4.0.2"
