--- a/web-app/package.json
+++ b/web-app/package.json
@@ -1,32 +1,41 @@
 {
-  "name": "pasteboard",
+  "name": "web-app",
   "version": "1.0.0",
   "description": "",
+  "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "start": "tsc && node dist/index.js"
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "node ./build/client.esbuild.js",
+    "build:server": "node ./build/server.esbuild.js",
+    "start": "npm run build && node output/server/main.js",
+    "debug:server": "ts-node-dev --inspect --transpile-only src/server/main.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-rate-limit": "^5.2.3",
-    "mongodb": "^3.6.2",
-    "nunjucks": "^3.2.2",
-    "reflect-metadata": "^0.1.13",
-    "tsyringe": "^4.3.0",
-    "uuid": "^8.3.1"
+    "bunyan": "^1.8.15",
+    "dotenv": "^16.0.1",
+    "esbuild": "^0.14.48",
+    "express": "^4.18.1",
+    "joi": "^17.6.0",
+    "mongodb": "^4.7.0",
+    "node-fetch": "^2.6.7",
+    "nunjucks": "^3.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^3.0.0",
-    "@types/express": "^4.17.8",
-    "@types/express-rate-limit": "^5.1.0",
-    "@types/mongodb": "^3.5.27",
-    "@types/nunjucks": "^3.1.3",
-    "tslint": "^6.1.3",
-    "typescript": "^4.0.2"
+    "@types/bunyan": "^1.8.8",
+    "@types/express": "^4.17.13",
+    "@types/mongodb": "^4.0.7",
+    "@types/node": "^18.0.3",
+    "@types/node-fetch": "^2.6.2",
+    "@types/nunjucks": "^3.2.1",
+    "@types/react-dom": "^18.0.6",
+    "@types/uuid": "^8.3.4",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.4"
   }
 }
