--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "nunjucks": "^3.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "ws": "^8.8.1"
   },
   "devDependencies": {
     "@types/bunyan": "^1.8.8",
@@ -35,6 +36,7 @@
     "@types/nunjucks": "^3.2.1",
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.4",
+    "@types/ws": "^8.5.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   }
